--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,8 +1,18 @@
 
 
 .container{
-    position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	position: relative;
+	top: 20%;
+    width: 40%;
+    height: 50%;
+}
+
+
+h2 {
+    text-align: center;
+}
+
+.input-group{
+	left: 25%;
+	max-width: 300px;
 }
